# rigorix-oss

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HOW_RIGORIX_WAS_BUILT.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cargo  guardian-manifest.json  rust-toolchain.toml
actions/: Cargo.toml  Dockerfile  README.md  WORKFLOW.md  action.yml  guardian-manifest.json
actions/.agents/: README.md
actions/.agents/scripts/: validate-security.sh
actions/.pi/: .guardian-epic-state.json  .guardian-pipeline-state.json  ROADMAP.md  preflight_report.json  workpad.md
actions/.pi/architecture/: CHANGELOG.md
actions/.pi/context/: patterns.md
actions/.pi/domain/: exploration.md
actions/.pi/extensions/: ask-user-question.ts  domain-explorer.ts
actions/.pi/issues/: issue-actioncontext.md  issue-actioninputs.md  issue-actionmode.md  issue-actionrouter.md  issue-aisignaldetector.md  issue-annotationwriter.md  issue-architecture-readiness.md  issue-auditbackend-trait-open-core-boundary-.md  issue-auditposter.md  issue-auditrecordqueue.md  issue-cidetector.md  issue-commentparser.md  issue-configloader.md  issue-contract-freeze.md  issue-filesystemauditbackend-oss-default-.md  issue-forkdetector.md  issue-hmacsigner.md  issue-inputparser.md  issue-limitenforcer.md  issue-orgpolicymerger.md  issue-outputformatter.md  issue-pathvalidator.md  issue-policydocument.md  issue-policyevaluator.md  issue-policyloader.md  issue-policyrule-types.md  issue-prcommentmanager.md  issue-prdiff.md  issue-proofing.md  issue-riskclassifier.md  issue-secretmasker.md  issue-signedauditrecord.md  issue-statuscheckmanager.md  issue-stepsummarywriter.md  issue-tokenvalidator.md  issue-urlallowlist.md
actions/.pi/prompts/: context-refresh.md  epic-plan.md  pattern-extract.md
actions/.pi/scripts/: create-mr.sh  validate-architecture-readiness.sh
actions/docs/: dr-plan-action-input.md  dr-plan-action-output.md  dr-plan-audit-posting.md  dr-plan-ci-integration.md  dr-plan-diff-analyzer.md  dr-plan-policy-evaluator.md  dr-plan-security-config.md  dr-plan.md  runbook-action-input.md  runbook-action-output.md  runbook-ci-integration.md  runbook-diff-analyzer.md  runbook-policy-evaluator.md  runbook-security-config.md  runbook.md
actions/src/: lib.rs  main.rs
actions/src/action_entrypoint/: mod.rs
actions/src/action_input/: mod.rs
actions/src/action_output/: mod.rs
actions/src/audit_posting/: mod.rs
actions/src/ci_integration/: mod.rs
actions/src/diff_analyzer/: mod.rs
actions/src/policy_evaluator/: mod.rs
actions/src/security_config/: mod.rs
actions/src/shared/: github_client.rs  mod.rs
actions/tests/: inputparser_integration.rs
cli/: Cargo.toml  README.md  guardian-manifest.json
cli/.agents/scripts/: validate-architecture.sh  validate-canonical.sh  validate-ci.sh  validate-integration.sh  validate-operations.sh  validate-security.sh  validate-tests.sh
cli/.claude/: CLAUDE.md  README.md
cli/.claude/architecture/: CHANGELOG.md
cli/.claude/context/: INDEX.md  checklists.md  output-formats.md  patterns.md  project.md
cli/.claude/workflows/: blueprint-update.md  blueprint-validate.md  bug-fix.md  context-refresh.md  epic-plan.md  feature-development.md  git-issues.md  hotfix.md  issue-closeout.md  issue-draft.md  issue-merge.md  pattern-extract.md  plan-to-issues.md  refactoring.md  scope-analyzer.md  sync-check.md
cli/.pi/: .guardian-epic-state.json  .guardian-pipeline-state.json  INDEX.md  preflight_report.json
cli/.pi/agent/: AGENTS.md
cli/.pi/agents/: architecture-coordinator.md  security-validator.md
cli/.pi/architecture/: CHANGELOG.md  roadmap.md
cli/.pi/context/: project.md
cli/.pi/domain/: exploration.md  ubiquitous-language.md
cli/.pi/extensions/: architect.ts  coordinator.ts  domain-explorer.ts  kanban.ts  pipeline.ts  (+4 more)
cli/docs/: dr-plan-cancellation.md  dr-plan-cli-boundary.md  dr-plan-configuration.md  dr-plan-event-system.md  dr-plan-execution.md  dr-plan-observability.md  dr-plan-planning.md  dr-plan-state-persistence.md  dr-plan-template-generation.md  dr-plan-template.md  dr-plan-tui.md  dr-plan.md  runbook-cancellation.md  runbook-cli-boundary.md  runbook-configuration.md  runbook-event-system.md  runbook-execution.md  runbook-observability.md  runbook-planning.md  runbook-state-persistence.md  runbook-template-generation.md  runbook-template.md  runbook-tui.md  runbook.md
cli/src/: lib.rs  main.rs  tests.rs  tracing.rs
engine/: .gitignore  Cargo.toml  README.md  deny.toml  guardian-manifest.json
engine/.githooks/: pre-commit
engine/.pi/: .guardian-epic-state.json  .guardian-pipeline-state.json  preflight_report.json  types.ts
engine/benches/: dag_engine.rs
engine/docs/: dr-plan-budget-tracking.md  dr-plan-cancellation.md  dr-plan-code-generation.md  dr-plan-code-graph.md  dr-plan-dag-engine.md  dr-plan-enforcement.md  dr-plan-error-handling.md  dr-plan-event-system.md  dr-plan-execution-engine.md  dr-plan-failure-classification.md  dr-plan-failure-parser.md  dr-plan-hooks.md  dr-plan-llm-step.md  dr-plan-orchestrator.md  dr-plan-plan-validation.md  dr-plan-planning-pipeline.md  dr-plan-policy-engine.md  dr-plan-quality-gates.md  dr-plan-recovery-recipes.md  dr-plan-repo-engine.md  dr-plan-risk-gating.md  dr-plan-state-persistence.md  dr-plan-template-system.md  dr-plan-tool-system.md  runbook-budget-tracking.md  runbook-cancellation.md  runbook-code-generation.md  runbook-code-graph.md  runbook-configuration.md  runbook-dag-engine.md  runbook-enforcement.md  runbook-error-handling.md  runbook-event-system.md  runbook-execution-engine.md  runbook-failure-classification.md  runbook-failure-parser.md  runbook-hooks.md  runbook-llm-step.md  runbook-orchestrator.md  runbook-plan-validation.md  (+9 more)
engine/src/: error.rs  lib.rs
engine/tests/: audit_trail_integration.rs  budget_enforcement_integration.rs  dag_engine_integration.rs  failure_parser_service_integration.rs  failure_parser_suggestion_integration.rs  failure_parser_template_integration.rs  failure_parser_typescript_integration.rs  plan_to_execute_integration.rs
(+1488 files in other folders)
