[workspace]
members = ["engine", "cli", "actions"]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Arman Wolkensteiner-Jalili and Rigorix contributors"]
edition = "2024"

[workspace.dependencies]
# Shared external dependencies (single version across all crates)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
regex = "1"
tempfile = "3"

