[package]
name = "rigorix-actions"
version = "0.1.0"
edition = "2024"
description = "GitHub Actions integration for Rigorix — thin adapter over rigorix-engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rigorix/rigorix-oss"

[[bin]]
name = "rigorix-action"
path = "src/main.rs"

[dependencies]
rigorix-engine = { path = "../engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
globset = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
async-trait = "0.1"
regex = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
