[package]
name = "rigorix-actions"
version = "0.1.0"
edition = "2024"
description = "GitHub Actions integration for Rigorix — thin adapter over rigorix-engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arman-jalili/rigorix-oss"

[[bin]]
name = "rigorix-action"
path = "src/main.rs"

[dependencies]
rigorix-engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
clap = { version = "4", features = ["derive", "env"] }
globset = "0.4"
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
async-trait.workspace = true
regex.workspace = true

[dev-dependencies]
wiremock = "0.6"
tempfile.workspace = true
