[package]
name = "rigorix-cli"
version = "0.1.0"
edition = "2024"
description = "Template-driven DAG execution CLI — thin wrapper around rigorix-engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arman-jalili/rigorix-oss"

[lib]
name = "rigorix"

[dependencies]
rigorix-engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
ratatui = "0.29"
crossterm = "0.28"
futures = "0.3"
dirs = "6"

[dev-dependencies]
tempfile.workspace = true
