[package]
name = "rigorix-engine"
version = "0.1.0"
edition = "2024"
description = "Template-driven DAG execution engine with bounded autonomy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rigorix/rigorix-oss"

[features]
live-tests = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11.0"
hmac = "0.13.0"
reqwest = { version = "0.13.4", features = ["json"] }
indexmap = { version = "2", features = ["serde"] }
rand = "0.10.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
prometheus = "0.14.0"
regex = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dag_engine"
harness = false

