[package]
name = "rigorix-engine"
version = "0.1.0"
edition = "2024"
description = "Template-driven DAG execution engine with bounded autonomy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arman-jalili/rigorix-oss"

[features]
live-tests = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2 = "0.11.0"
hmac = "0.13.0"
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
indexmap = { version = "2", features = ["serde"] }
rand = "0.10.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.21"
tracing-appender = "0.2"
prometheus = "0.14.0"

[dev-dependencies]
tempfile.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dag_engine"
harness = false
